Revision history for {{$dist->name}}

{{$NEXT}}
          - fix missing .gitignore in minted dists
          - [-Encoding] podweaver plugin added to this distribution and
            minted dists

0.003     2013-04-21 10:22:48 PDT-0700 (Karen Etheridge)
          - now building ourself with ourselves, [@Author::ETHER].
          - [Test::UnusedVars] added
          - RT mail link cleaned up
          - bump prereqs for Dist::Zilla::Role::PluginBundle::PluginRemover,
            Dist::Zilla::Plugin::Test::CPAN::Changes
          - document the multiple mechanisms for adding stopwords (and add the
            [-Stopwords] weaver plugin, which seems to be needed sometimes)

0.002     2013-04-14 15:40:08 PDT-0700 (Karen Etheridge)
          - do not index our profiles/, to avoid its contents from showing up
            under "Documentation" on metacpan
          - users of [@Author::ETHER] can now -remove plugins

0.001     2013-04-14 13:52:50 PDT-0700 (Karen Etheridge)
          - Initial release.
