@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}
           - fix missing .gitignore in minted dists
           - [-Encoding] podweaver plugin added to this distribution and
             minted dists
+          - extra stopwords added, after disabling my local aspell dictionary
 
 0.003     2013-04-21 10:22:48 PDT-0700 (Karen Etheridge)
           - now building ourself with ourselves, [@Author::ETHER].
